Begun creation of the Inventory Management GUI
- GUI now contains labels, button, and tables.
- Created (4) new classes due to static/non-static method calling issue.
- Tool Table is functioning.
- Tool buttons 'Add Tool' and 'Refresh List' are functioning.
- Configured cross referencing for categoryId and locationId to show
their respective names in the columns (instead of the ID) and executes
the same task in reverse when adding new tools.
- Created spinners for Category and Location selection when adding tools.
- Added getCategoryByName and getLocationByName methods for optimization.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ file.reference.mysql-connector-java-8.0.17.jar=..\\..\\..\\Desktop\\mysql-connec
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.17.jar}
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,7 +76,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=GBMFG_ECS
-main.class=gbmfg_ecs.GBMFG_ECS
+main.class=gbmfg_ecs.InventoryMgmtGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -95,5 +96,6 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
-src.dir=src
+src.resources.dir=src\\resources
+src.src.dir=src
 test.src.dir=test
