--- a/src/resources/db.properties
+++ b/src/resources/db.properties
@@ -1,5 +1,5 @@
 # Database connection properties
 db.url=jdbc:mysql://localhost:3306/gbmfg_ecs
 db.username=root
-db.password=devry123
+db.password=G8#fT!7zC@v3Xn2L
 db.driverClassName=com.mysql.cj.jdbc.Driver
