Fixed issues with login validation and session timeout handling.
Ensured the 'Login' button is disabled when fields are empty, added functionality for 'Remember Me' to keep the user logged in, and improved error handling for empty username and password fields.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GBMFG_ECS
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.17.jar=..\\..\\..\\Desktop\\mysql-connector-java-8.0.17\\mysql-connector-java-8.0.17.jar
+file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\Chandler Perry\\Desktop\\mysql-connector-java-8.0.17\\mysql-connector-java-8.0.17\\mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
