Switched db access got program running again. Saving in case other adjustments need to be made

--- a/src/resources/db.properties
+++ b/src/resources/db.properties
@@ -1,5 +1,5 @@
 # Database connection properties
 db.url=jdbc:mysql://localhost:3306/gbmfg_ecs
 db.username=root
-db.password=devry123
+db.password=FunkoPop09!!
 db.driverClassName=com.mysql.cj.jdbc.Driver
